@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: foreach.test,v 1.6 2000/04/10 17:18:59 ericm Exp $
+# RCS: @(#) $Id: foreach.test,v 1.6.2.1 2001/08/07 15:41:20 msofer Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -210,6 +210,15 @@ test foreach-5.4 {break tests} {
     catch {break foo} msg
     set msg
 } {wrong # args: should be "break"}
+# Check for bug #406709 
+test foreach-5.5 {break tests} {
+    proc a {} {
+	set a 1
+	foreach b b {list [concat a; break]; incr a}
+	incr a
+    }
+    a
+} {2}
 
 # Test for incorrect "double evaluation" semantics
 
